--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-transition-group": "^4.4.5",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
