--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
